--- a/app/translations/messages.pl.xlf
+++ b/app/translations/messages.pl.xlf
@@ -66,6 +66,22 @@
                 <source>action.back_to_list</source>
                 <target>Wróć do listy</target>
             </trans-unit>
+            <trans-unit id="action.edit">
+                <source>action.edit</source>
+                <target>Edytuj</target>
+            </trans-unit>
+            <trans-unit id="action.delete">
+                <source>action.delete</source>
+                <target>Usuń</target>
+            </trans-unit>
+            <trans-unit id="action.create">
+                <source>action.create</source>
+                <target>Utwórz</target>
+            </trans-unit>
+            <trans-unit id="category.category_list">
+                <source>category.category_list</source>
+                <target>Lista kategorii</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
