--- a/app/translations/messages.pl.xlf
+++ b/app/translations/messages.pl.xlf
@@ -34,13 +34,21 @@
                 <source>label.updated_at</source>
                 <target>Zaktualizowano</target>
             </trans-unit>
+            <trans-unit id="label.no_thumbnail_available">
+                <source>label.no_thumbnail_available</source>
+                <target>Ten post nie ma miniaturki</target>
+            </trans-unit>
             <trans-unit id="message.empty_list">
                 <source>message.empty_list</source>
                 <target>Lista jest pusta.</target>
             </trans-unit>
             <trans-unit id="message.record_not_found">
                 <source>message.record_not_found</source>
-                <target>Rekord nie znaleziony.</target>
+                <target>Rekord nieznaleziony.</target>
+            </trans-unit>
+            <trans-unit id="title.post_list">
+                <source>title.post_list</source>
+                <target>Lista postów</target>
             </trans-unit>
             <trans-unit id="title.record_list">
                 <source>title.record_list</source>
