--- a/app/translations/messages.pl.xlf
+++ b/app/translations/messages.pl.xlf
@@ -130,9 +130,9 @@
                 <source>category.category_list</source>
                 <target>Lista kategorii</target>
             </trans-unit>
-            <trans-unit id="message.category_contains_tasks">
-                <source>message.category_contains_tasks</source>
-                <target>Kategoria ma przypisane zadania</target>
+            <trans-unit id="message.category_contains_posts">
+                <source>message.category_contains_posts</source>
+                <target>Kategoria ma przypisane posty</target>
             </trans-unit>
         </body>
     </file>
